@@ -95,6 +95,8 @@ Bug fixes:
 - Fix error on empty iSCSI target.
 - Fix VLAN is not configured.
 - Fix permission of /var/ftmp.
+- Fix AD password that contains a special character is not worked.
+- Fix Access AD does not set CIFS Authentication.
 
 Permanent restrictions:
 - It is not possible to format a SoftRAID disk with MSDOS FAT16/32.
